# firstcoin

./: .travis.yml  COPYING  INSTALL  Makefile.am  configure.ac  libfirstcoinconsensus.pc.in
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/: README.md  bitcoin-cli.bash-completion  bitcoin-tx.bash-completion  bitcoind.bash-completion  gitian-build.sh
contrib/debian/: README.md  control  copyright  firstcoin-qt.desktop  firstcoin-qt.lintian-overrides  firstcoin-qt.manpages  firstcoin-qt.protocol  firstcoin-tx.bash-completion  rules  watch  (+8 more)
depends/: README.md
doc/: README_windows.txt
qa/: README.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  (+83 more)
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  crypto_hash.cpp  rollingbloom.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  downloader.cpp  downloader.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  (+70 more)
src/qt/forms/: intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  (+45 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: firstcoin.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/java/: org_firstcoin_NativeSecp256k1.c  org_firstcoin_NativeSecp256k1.h  org_firstcoin_Secp256k1Context.c  org_firstcoin_Secp256k1Context.h
src/secp256k1/src/java/org/firstcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bitcoin-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+18 more)
src/test/data/: README.md
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+85 files in other folders)
